Fix overflow break on error card

--- a/src/components/Independent/Independent.scss
+++ b/src/components/Independent/Independent.scss
@@ -6,6 +6,8 @@
   @extend %italic-light-body;
 }
 
-a {
-  color: $soft-black
+.error-address {
+  color: $tiktok-red;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
